# Indus

./: .env.example  .gitignore  README.md  docker-compose.cache.yml  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml
.github/actions/build-service-images/: action.yml
.github/actions/deploy/: action.yml
.github/actions/prepare-docker-env/: action.yml
.github/workflows/: deploy-production.yml  setup-server.yml
services/agent/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
services/agent/src/: agent.py
services/nginx/: Dockerfile  docker-entrypoint.sh  generate-certs.sh  nginx.conf
services/web/: .dockerignore  Dockerfile  package.json
services/web/app/: globals.css  layout.tsx
services/web/app/(app)/: layout.tsx
services/web/app/components/livekit/: page.tsx
services/web/components/: app.tsx  battle-session-view.tsx  welcome.tsx
services/web/components/livekit/: media-tiles.tsx
services/web/components/livekit/agent-control-bar/: battle-control-bar.tsx
services/web/components/ui/: button.tsx
services/web/hooks/: useConnectionDetails.ts
services/web/lib/: types.ts  utils.ts
